--- a/HistoryCleaner/app.config
+++ b/HistoryCleaner/app.config
@@ -1,16 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="HistoryCleaner.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="HistoryCleaner.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <userSettings>
     <HistoryCleaner.Properties.Settings>
       <setting name="TargetKeys" serializeAs="Xml">
         <value>
-          <ArrayOfRegistryKeyInfo xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <ArrayOfRegistryKeyInfo xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <RegistryKeyInfo>
               <KeyName>HKEY_CURRENT_USER\Software\Local AppWizard-Generated Applications</KeyName>
               <Description>Visual C++ 6.0 の MFC AppWizard がデフォルトで使用するレジストリを削除</Description>
@@ -52,4 +51,7 @@
       </setting>
     </HistoryCleaner.Properties.Settings>
   </userSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
 </configuration>
