--- a/HistoryCleaner/Properties/Settings.settings
+++ b/HistoryCleaner/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HistoryCleaner.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="TargetKeys" Type="System.Collections.Generic.List&lt;HistoryCleaner.RegistryKeyInfo&gt;" Scope="User">
+    <Setting Name="TargetKeys" Type="System.Collections.Generic.List&lt;HistoryCleaner.Utility.RegistryKeyInfo&gt;" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
