--- a/HistoryCleanerCore/HistoryCleanerCore.csproj
+++ b/HistoryCleanerCore/HistoryCleanerCore.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
